# Cyber-Essentials

./: .gitignore  ARCHITECTURE.md  CHANGES_2025.md  ENHANCEMENT_ROADMAP.md  FLEET_ARCHITECTURE.md  FLEET_README.md  GETTING_STARTED.md  GUI_GUIDE.md  GUI_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  QUICK_START.md  README.md  REPORT_GUIDE.md  SECURITY.md  TESTING_GUIDE.md  USER_GUIDE.md  ce-config.json  config-schema.json  fix_indent.py  mfa_status_fixed.txt  pyproject.toml  quick_fix.ps1  report.json  run_gui.py  test_final.json  test_fixed.json  test_report.json  test_report_admin.json  test_verification.json
.github/workflows/: build.yml
Auto_Fix_Scripts/: .gitkeep
agent/: README.md  agent.py  config.py  requirements.txt  token_store.py
controller/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  start.sh
controller/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
deployment/gpo/: deploy-agent-gpo.ps1
deployment/intune/: deploy-agent-intune.ps1
deployment/macos/: com.cyberessentials.agent.plist
deployment/systemd/: ce-agent.service
deployment/windows/: install-agent-service.ps1
docs/deployment/: AGENT_DEPLOYMENT.md  CONTROLLER_DEPLOYMENT.md
frontend/: index.html  package.json
report/: schema.json
report_schema/: schema.json
reports/: .gitkeep  error_check.json  my_test_scan.json  report_fix.ps1
scanner/: __init__.py  comparison.py  gui.py  main.py  models.py  remediation.py  report_generator.py  runner.py  utils.py
ui/: app.py  scan_worker.py
(+22 files in other folders)
