[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-essentials-scanner"
version = "0.2.0"
description = "Cyber Essentials System Scanner AI Agent"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.scripts]
ce-scan = "scanner.main:main"
ce-scan-gui = "scanner.gui:main"